# qbaobab

./: CMakeLists.txt  README.md  diskchart.cpp  diskchart.h  diskdata.cpp  diskdata.h  driveitemdelegate.cpp  driveitemdelegate.h  drivelistmodel.cpp  drivelistmodel.h  driveselectorwidget.cpp  driveselectorwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.h
CompactFSTree/: CMakeLists.txt
CompactFSTree/src/: main.cpp
CompactFSTree/src/builder/: fs_tree_builder.cpp  fs_tree_builder.h
CompactFSTree/src/core/: compact_fs_tree.cpp  compact_fs_tree.h  fs_traits.h  node.h
CompactFSTree/src/scanner/: apfs_scanner.cpp  apfs_scanner.h  fat_scanner.cpp  fat_scanner.h  fs_scanner.cpp  fs_scanner.h  hfsplus_scanner.cpp  hfsplus_scanner.h  ntfs_scanner.cpp  ntfs_scanner.h  posix_scanner.cpp  posix_scanner.h  scan_orchestrator.cpp  scan_orchestrator.h
CompactFSTree/src/serialization/: fs_tree_serializer.cpp  fs_tree_serializer.h
CompactFSTree/tests/: test_builder.cpp  test_compact_fs_tree.cpp  test_serializer.cpp  test_synthetic_tree.cpp
data/: scan01.json
